--- a/それぞれの役.md
+++ b/それぞれの役.md
@@ -8,7 +8,7 @@
 平和 | なし
 断么九 | なし
 一盃口 | なし
-役牌 | 字牌を消したので不存在
+役牌 | なし
 嶺上開花 | なし
 槍槓 | なし
 海底摸月 | なし
@@ -20,21 +20,21 @@
 -- | --
 三色同順 | なし
 一気通貫 | 「同色の3牌面子を3種類集めて1~9が揃うとき」に定義を変更。
-混全帯么九 | 字牌を消したので不存在
+混全帯么九 | なし
 七対子 | 「対子」の定義は雀頭の定義に従う。
 対々和 | なし
 三暗刻 | なし
 三槓子 | なし
 三色同刻 | なし
-混老頭 | 字牌を消したので不存在
-小三元 | 字牌を消したので不存在
+混老頭 | 「各面子・雀頭の構成要素に1か9か字牌があること」という条件として解釈
+小三元 | なし
 ダブル立直 | なし
 
 三飜役・六飜役
 
 役 | 変更点
 -- | --
-混一色 | 字牌を消したので不存在
+混一色 | なし
 純全帯么九 | 「各面子・雀頭の構成要素に1か9があること」という条件として解釈
 二盃口 | なし
 清一色 | なし
@@ -43,14 +43,14 @@
 
 役 | 変更点
 -- | --
-国士無双 | 字牌を消したので不存在
+国士無双 | なし
 四暗刻 | なし
-大三元 | 字牌を消したので不存在
-四喜和 | 字牌を消したので不存在
-字一色 | 字牌を消したので不存在
+大三元 | なし
+四喜和 | なし
+字一色 | なし
 緑一色 | 使える奇数の牌が4枚しかない以上4面子1雀頭や七対子は構成できず、必然的に「14桁の素数で役満」と複合した形になる
 清老頭 | 萬子筒子索子で4つの199を作り、余った牌で19か11を構成することで実現可能
-九蓮宝燈 | これから考える
+九蓮宝燈 | どれも素数麻雀でも和了形になるが、「14桁の素数で役満」と複合するかどうか未検証
 四槓子 | なし
 天和 | なし
 地和 | なし
