--- a/それぞれの役.md
+++ b/それぞれの役.md
@@ -48,7 +48,7 @@
 大三元 | なし
 四喜和 | なし
 字一色 | なし
-緑一色 | 使える奇数の牌が4枚しかない以上4面子1雀頭や七対子は構成できず、必然的に「14桁の素数で役満」と複合した形になる
+緑一色 | 使える奇数の牌が4枚しかない以上、発なし緑一色の場合は4面子1雀頭や七対子は構成できず、必然的に「14桁の素数で役満」と複合した形になる
 清老頭 | 萬子筒子索子で4つの199を作り、余った牌で19か11を構成することで実現可能
 九蓮宝燈 | どれも素数麻雀でも和了形になるが、「14桁の素数で役満」と複合するかどうか未検証
 四槓子 | なし
