--- a/それぞれの役.md
+++ b/それぞれの役.md
@@ -20,13 +20,13 @@
 -- | --
 三色同順 | なし
 一気通貫 | 「同色の3牌面子を3種類集めて1~9が揃うとき」に定義を変更。
-混全帯么九 | なし
+混全帯么九 | 「各面子・雀頭の構成要素に1か9か字牌があること」という条件として解釈
 七対子 | 「対子」の定義は雀頭の定義に従う。
 対々和 | なし
 三暗刻 | なし
 三槓子 | なし
 三色同刻 | なし
-混老頭 | 「各面子・雀頭の構成要素に1か9か字牌があること」という条件として解釈
+混老頭 | なし
 小三元 | なし
 ダブル立直 | なし
 
